--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		
 		<div class="block-two" onclick="pink()" id="oooy">Number labs</div>
 		
-		<div id="mig">Да, я много не знаю! Но ведь я не сдаюсь!</div>
+		<div id="mig">Да, я многого не знаю! Но ведь я не сдаюсь!</div>
 		
 		<script src="js/script3.js"></script>
 	</body>
